examples/invalid/syntaxErr/if/ifiErr.wacc
# if typo
# Output:
# #syntax error#

#Program:#

begin
  ifi true 
  then
    skip
  else
    skip
  fi
end
